# liti_case_analytics_engineer_dags

./: README.md  pyproject.toml
.github/workflows/: deploy_dags.yml
dags/: dag.py  sync_dags.py
dags/dag_dw_data_modelling/: dag.py
dags/dag_dw_data_modelling/dbt_dw/: cosmos_config.py  dbt_project.yml
dags/dag_dw_data_modelling/dbt_dw/models/: sources.yml
dags/dag_dw_data_modelling/dbt_dw/models/bronze/: bronze_customer.sql  bronze_customer_meal_plan.sql  bronze_customer_medicines_prescriptions.sql  bronze_customer_objectives.sql  bronze_meal_plans.sql  bronze_medicines.sql  bronze_objectives.sql  bronze_weighins.sql
dags/dag_dw_data_modelling/dbt_dw/models/gold/: gold_dim_customer.sql  gold_dim_meal_plan.sql  gold_dim_medicines.sql  gold_ft_medicines_prescriptions.sql  gold_ft_weighins.sql
dags/dag_dw_data_modelling/dbt_dw/models/silver/: silver_customer.sql  silver_customer_meal_plan.sql  silver_customer_medicines_prescriptions.sql  silver_customer_objectives.sql  silver_meal_plans.sql  silver_medicines.sql  silver_objectives.sql  silver_weighins.sql
dags/dag_dw_data_modelling/dbt_dw/models/silver/test/: silver_customer_meal_plan_test.yml  silver_customer_medicines_prescriptions_test.yml  silver_customer_objectives_test.yml  silver_customer_test.yml  silver_meal_plans_test.yml  silver_medicines_test.yml  silver_objectives_test.yml
dags/dag_dw_data_modelling/dbt_dw/profiles/: profiles.yml
