[tool.poetry]
name = "liti-case-analytics-engineer-dags"
version = "0.1.0"
description = ""
authors = ["Alan Lanceloth <alan.lanceloth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
astronomer-cosmos = "1.6.0"
dbt-core = "1.8.7"
dbt-bigquery = "1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
